--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
   <link rel="shortcut icon" href="ico/favicon.ico">
 
   <!-- =======================================================
-    Theme Name: Selecao
-    Theme URL: https://bootstrapmade.com/selecao-bootstrap-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
+    Theme Name: Services
+    Author: John Modica
+    Author URL: https://John-Modica.github.io/
   ======================================================= -->
 </head>
 
@@ -82,7 +81,7 @@
               <ul>
                 <li class="animate-in">
                   <div class="info letter-container">
-                    <h2 class="fade">Hiya I am selecao</h2>
+                    <h2 class="fade">Welcome to CybernetiX S3C Services</h2>
                   </div>
                   <h4 class="subtitle">Mei ea persius alienum errem audiam eum id impetus bonorum</h4>
                   <div class="bottomup">
@@ -91,7 +90,7 @@
                 </li>
                 <li class="animate-in">
                   <div class="info letter-container">
-                    <h2 class="fade">We creates unique website</h2>
+                    <h2 class="fade">We Offer Different Services For Your Business Needs</h2>
                   </div>
                   <h4 class="subtitle">Lorem ipsum dolor sit amet viris torquatos ad vis invidunt singulis</h4>
                   <div class="lefttop">
@@ -100,7 +99,7 @@
                 </li>
                 <li class="animate-in">
                   <div class="info letter-container">
-                    <h2 class="fade">With latest technology</h2>
+                    <h2 class="fade">With The Latest Technology</h2>
                   </div>
                   <h4 class="subtitle">His at quod impedit eu zril quando perfecto mel sed eu eros debet.</h4>
                   <div class="righttop">
@@ -136,7 +135,7 @@
         <div class="span12">
           <div class="section-intro">
             <p>
-              Congue assentior eu vix. Iusto voluptaria vis te. Eos ea quot qualisque, usu an doming graeco vocent. Ei vocent patrioque pri, mea cu soluta accusam platonem. His mentitum laboramus definitionem in.
+              Our company has come a long way from the it`s original depicted future. We had gone through many changes to keep a competitave, yet different approach to cyber security maintenance. We are attempting to reach a new goal in creating a positive outcome into preventing Data Loss, network breaches, and other harmful events that can cause loss in time and money.
             </p>
           </div>
         </div>
